--- a/Views/Home/LocationsAndActivities.cshtml
+++ b/Views/Home/LocationsAndActivities.cshtml
@@ -123,7 +123,7 @@
                 <div class="calendar-overlay-message">
                     <div class="overlay-icon">⏱️</div>
                     <p>Please select city break period to have access to the agenda</p>
-                    <a href="/Home/Index?scheduleId=${schedule_Id}" class="btn btn-primary">Select Period</a>
+                    <a href="/Home/TimePeriod?scheduleId=${schedule_Id}" class="btn btn-primary">Select Period</a>
                 </div>
             `;
 
