--- a/Views/Home/SchedulesList.cshtml
+++ b/Views/Home/SchedulesList.cshtml
@@ -68,7 +68,7 @@
                             </p>
                             <a class="btn btn-warning"
                                asp-controller="Home"
-                               asp-action="Index"
+                               asp-action="TimePeriod"
                                asp-route-scheduleId="@schedule.Schedule_Id">
                                 Select Period
                             </a>
